src/objects/CB_Block__c.object
<CustomObject>
    <description>This object stores the blocks associated to quadrant. We can have 4 blocks per quadrants.</description>
    <fields>
        <fullName>CB_Block_Name__c</fullName>
        <description>This field represents the Name of the Block(belongs to Quadrant), which would be displayed along with the image on the Quadrant block.</description>
        <inlineHelpText>This field represents the Name of the Quadrant, which would be displayed along with the image on the Quadrant block.</inlineHelpText>
        <label>Block Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Cost__c</fullName>
        <description>Cost of Opening the block</description>
        <inlineHelpText>Cost of Opening the block</inlineHelpText>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CB_Icon_Image_URL__c</fullName>
        <description>This field stores the URL of an icon image of a block, which would be shown through out the application.</description>
        <inlineHelpText>This field stores the URL of an icon image of a block, which would be shown through out the application.</inlineHelpText>
        <label>Icon Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Quadrant__c</fullName>
        <description>Quadrant to which this block belongs.</description>
        <inlineHelpText>Quadrant to which this block belongs.</inlineHelpText>
        <label>Quadrant</label>
        <referenceTo>CB_Quadrant__c</referenceTo>
        <relationshipLabel>Block</relationshipLabel>
        <relationshipName>Block</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CB_Sequence__c</fullName>
        <description>Sequence of the Block to be shown on the UI, It will also maintain the levels.</description>
        <inlineHelpText>Sequence of the Block to be shown on the UI, It will also maintain the levels.</inlineHelpText>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Block</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CB_Block_Name__c</columns>
        <columns>CB_Cost__c</columns>
        <columns>CB_Quadrant__c</columns>
        <columns>CB_Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Block - {0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Block</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>